# cvec234

./: CMakeLists.txt  LICENSE  cvec234_ideas.txt
cvec234/: matrix.h  matrix_core.h  matrix_inverse.h  matrix_multiplication.h  matrix_printing.h  matrix_transformation.h  vector.h  vector_implementation_extensions.h  vector_printing.h  vector_template.hpp
tests/: CMakeLists.txt  tests.c
